# Kodiak6

./: .gitignore  CMakeLists.txt  GenerateVulkanFiles.bat  LICENSE  Main.sln  README.md  SetupConfigurations.cmake
Apps/: CMakeLists.txt
Apps/MySecondApp/: Main.cpp  MySecondAppApp.cpp  MySecondAppApp.h  Stdafx.h
Apps/Test/: CMakeLists.txt  Main.cpp  Stdafx.h  Test.sln  Test.vcxproj  Test.vcxproj.filters  TestApp.cpp  TestApp.h
Engine/: Application.cpp  Application.h  CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  FileSystem.cpp  FileSystem.h  Filesystem.cpp  Filesystem.h  InputSystem.cpp  InputSystem.h  LogSystem.cpp  LogSystem.h  Stdafx.h
Engine/Core/: Color.cpp  Color.h  CoreEnums.h  DWParam.h  FlagStringMap.cpp  FlagStringMap.h  GUIDs.cpp  GUIDs.h  IObject.h  IntrusivePtr.h  NonCopyable.h  NonMovable.h  RefCount.h  Utility.cpp  Utility.h  VectorMath.h
Engine/Core/Math/: BoundingBox.cpp  BoundingBox.h  BoundingPlane.h  BoundingSphere.h  CommonMath.h  Frustum.cpp  Frustum.h  Functions.inl  Matrix3.h  Matrix4.h  Quaternion.h  Random.h  Scalar.h  Transform.h  Vector.h
Engine/Graphics/: CreationParams.h  DeviceManager.cpp  DeviceManager.h  Enums.h  Formats.cpp  Formats.h  GraphicsCommon.cpp  GraphicsCommon.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsEnums.h  Interfaces.h
Engine/Graphics/DX12/: ColorBuffer12.cpp  ColorBuffer12.h  CommandAllocatorPool12.cpp  CommandAllocatorPool12.h  CommandContext12.cpp  CommandContext12.h  DepthBuffer12.cpp  DepthBuffer12.h  DescriptorHeap12.cpp  DescriptorHeap12.h  Device12.cpp  Device12.h  DeviceCaps12.cpp  DeviceCaps12.h  DeviceManager12.cpp  DeviceManager12.h  DirectXCommon.cpp  DirectXCommon.h  Enums12.cpp  Enums12.h  Flags12.h  Formats12.cpp  Formats12.h  FrameBuffer12.cpp  FrameBuffer12.h  GpuImage12.cpp  GpuImage12.h  GpuResource12.cpp  GpuResource12.h  GraphicsDevice12.cpp  GraphicsDevice12.h  GraphicsEnums12.cpp  GraphicsEnums12.h  PixelBuffer12.cpp  PixelBuffer12.h  Queue12.cpp  Queue12.h  Strings12.h
Engine/Graphics/VK/: ColorBufferVK.cpp  ColorBufferVK.h  CommandBufferPoolVK.cpp  CommandBufferPoolVK.h  CommandContextVK.cpp  CommandContextVK.h  CreationParamsVK.h  DepthBufferVK.cpp  DepthBufferVK.h  DeviceCapsVK.cpp  DeviceCapsVK.h  DeviceManagerVK.cpp  DeviceManagerVK.h  DeviceVK.cpp  DeviceVK.h  EnumsVK.cpp  EnumsVK.h  ExtensionManagerVK.cpp  ExtensionManagerVK.h  FlagsVK.h  FormatsVK.cpp  FormatsVK.h  GpuImageVK.cpp  GpuImageVK.h  GpuResourceVK.h  GraphicsDeviceVK.cpp  GraphicsDeviceVK.h  GraphicsEnumsVK.cpp  GraphicsEnumsVK.h  LoaderVk.cpp  LoaderVk.h  PixelBufferVK.cpp  PixelBufferVK.h  QueueVK.cpp  QueueVK.h  RefCountingVK.cpp  RefCountingVK.h  StringsVK.h  VersionVK.cpp  VersionVK.h  (+2 more)
Programs/: CMakeLists.txt
Programs/AppGen/: MakeNewApp.py
Programs/AppGen/Templates/: AppTemplate.sln  AppTemplate.vcxproj  AppTemplate.vcxproj.filters  CMakeLists.txt  Main.cpp  Stdafx.h  TEMPLATEApp.cpp  TEMPLATEApp.h
Programs/VulkanParser/: CMakeLists.txt  Program.cs  VulkanCommand.cs  VulkanExtension.cs  VulkanGenLoader.cs  VulkanGenerator.cs  VulkanParser.cs  VulkanParser.csproj  VulkanParser2.cs  VulkanVersion.cs
Programs/VulkanParser/Templates/: LoaderVK.cpp  LoaderVK.h
