#
# This code is licensed under the MIT License (MIT).
# THIS CODE IS PROVIDED *AS IS* WITHOUT WARRANTY OF
# ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING ANY
# IMPLIED WARRANTIES OF FITNESS FOR A PARTICULAR
# PURPOSE, MERCHANTABILITY, OR NON-INFRINGEMENT.
#
# Author:  David Elder
#

# Function to generate single App
function(generateApp APP_NAME)
	SET(APP_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/${APP_NAME})
	message(STATUS "Generating project file for app in ${APP_FOLDER}")
	# Main
	file(GLOB SOURCE *.cpp ${APP_FOLDER}/*.cpp)
	file(GLOB HEADERS *.h ${APP_FOLDER}/*.h)
	# Target executable
	add_executable(${APP_NAME} WIN32 ${SOURCE} ${HEADERS})
	target_link_libraries(${APP_NAME} Engine ${WINLIBS})
	set_target_properties(${APP_NAME} PROPERTIES
		ARCHIVE_OUTPUT_DIRECTORY "${APP_FOLDER}/Lib"
		LIBRARY_OUTPUT_DIRECTORY "${APP_FOLDER}/Lib"
		RUNTIME_OUTPUT_DIRECTORY "${APP_FOLDER}/Bin"
	)
	set_target_properties(${APP_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${APP_FOLDER}/Bin)
	set_target_properties(${APP_NAME} PROPERTIES FOLDER "Apps")
	set_target_properties(${APP_NAME} PROPERTIES 
		COMPILE_DEFINITIONS_DEBUG "_CONSOLE"
		COMPILE_DEFINITIONS_RELEASE "_CONSOLE"
		COMPILE_DEFINITIONS_RELWITHDEBINFO "_CONSOLE"
		COMPILE_DEFINITIONS_MINSIZEREL "_CONSOLE"
		LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE"
		LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE"
		LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:CONSOLE"
		LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:CONSOLE"
	)
endFunction(generateApp)


# List of all Apps
add_subdirectory("./Test")